java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018a.pass
package org.netbeans.test.java.hints;

import java.util.Map.Entry;
import Map.*;
import static Collections.sort;
import static Collections.*;

public class ImportInImport {
    
}
